<?xml version="1.0"?>
<package format="2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://download.ros.org/schema/package_format2.xsd">
  <name>gazebo_custom_sensor_preloader</name>
  <version>1.0.0</version>
  <description>Gazebo plugin that allows writing custom Gazebo sensors.</description>

  <license>BSD</license>
  <url>https://github.com/peci1/gazebo_custom_sensor_preloader</url>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>

  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rosbash</exec_depend>

  <!--
    In your own custom sensor implementations, you'll also have to add
    <exec_depend>gazebo_custom_sensor_preloader</exec_depend>
  -->
  <export>
    <gazebo_custom_sensor_preloader plugin="${prefix}/example_custom_sensor.xml" />
  </export>

</package>
